# SheepParter

./: .env.example  .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18bcd551e7ac_create_auth_tables.py
backend/src/sheepparter/: __init__.py  main.py
backend/src/sheepparter/application/: __init__.py  auth.py  health.py  security.py
backend/src/sheepparter/domain/: __init__.py  auth.py  health.py
backend/src/sheepparter/infrastructure/: __init__.py  auth_repository.py  config.py  demo_seed.py
backend/src/sheepparter/infrastructure/database/: models.py  session.py
backend/src/sheepparter/interfaces/http/: api.py  schemas.py
backend/src/sheepparter/interfaces/http/routes/: auth.py  health.py
backend/tests/: test_auth.py  test_health.py
docs/: architecture.md  dependency-whitelist.md  gameplay.md
docs/adr/: 0001-initial-architecture.md
docs/rules/: api-rules.md  coding-rules.md  frontend-ui-rules.md
frontend/: README.md  eslint.config.js  package-lock.json  package.json
frontend/apps/admin-web/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/apps/admin-web/src/: App.tsx  styles.css
frontend/apps/user-web/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/apps/user-web/src/: App.tsx  StartPage.tsx  i18n.ts  main.tsx  settings.css  start.css  styles.css
frontend/apps/user-web/src/gameplay/: CatchGame.tsx  DragonGame.tsx  RhythmGame.tsx  gameLogic.test.ts  (+2 more)
scripts/: check.ps1
