[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[project]
name = "sheepparter-backend"
version = "0.1.0"
description = "SheepParter backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "pydantic-settings>=2.4,<3",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.18,<2",
  "httpx2>=2.0,<3",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sheepparter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = []
